--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ b {
    grid-template-columns: 12rem auto 23rem;
 }
 
+/* Sidebar */
 aside {
    height: 100vh;
 }
@@ -217,4 +218,65 @@ aside .sidebar .message-count {
    color: var(--color-white);
    font-size: 11px;
    border-radius: var(--border-radius-1);
+}
+
+/* Main */
+main {
+   margin-top: 1.4rem;
+}
+
+main .analyse {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 1.6rem;
+}
+
+main .analyse > div {
+   background-color: var(--color-white);
+   padding: var(--card-padding);
+   border-radius: var(--card-border-radius);
+   margin-top: 1rem;
+   box-shadow: var(--box-shadow);
+   cursor: pointer;
+   transition: all 0.3s ease;
+}
+
+main .analyse > div:hover {
+   box-shadow: none;
+}
+
+main .analyse > div .status {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+main .analyse h3 {
+   margin-left: 0.6rem;
+   font-size: 1rem;
+}
+
+main .analyse .progresss {
+   position: relative;
+   width: 92px;
+   height: 92px;
+   border-radius:  50%;
+}
+
+main .analyse svg {
+   width: 7rem;
+   height: 7rem;
+}
+
+main .analyse svg circle {
+   fill: none;
+   stroke-width: 10;
+   stroke-linecap: round;
+   transform: translate(5px, 5px);
+}
+
+main .analyse .sales svg circle {
+   stroke: var(--color-success);
+   stroke-dashoffset: -30;
+   stroke-dasharray: 200;
 }
