--- a/styles.css
+++ b/styles.css
@@ -339,3 +339,96 @@ main .new-users .user-list .user img {
    margin-bottom: 0.4rem;
    border-radius: 50%;
 }
+
+main .recent-orders {
+   margin-top: 1.3rem;
+}
+
+main .recent-orders h2 {
+   margin-bottom: 0.8rem;
+}
+
+main .recent-orders table {
+   background-color: var(--color-white);
+   width: 100%;
+   padding: var(--card-padding);
+   text-align: center;
+   box-shadow: var(--box-shadow);
+   border-radius: var(--card-border-radius);
+   transition: all 0.3s ease;
+}
+
+main .recent-orders table:hover {
+   box-shadow: none;
+}
+
+main table tbody td {
+   height: 2.8rem;
+   border-bottom: 1px solid var(--color-light);
+   color: var(--color-dark-variant);
+}
+
+main table tbody tr:last-child td {
+   border: none;
+}
+
+main .recent-orders a {
+   text-align: center;
+   display: block;
+   margin: 1rem auto;
+   color: var(--color-primary);
+}
+
+.right-section {
+   margin-top: 1.4rem;
+}
+
+.right-section .nav {
+   display: flex;
+   justify-content: end;
+   gap: 2rem;
+}
+
+.right-section .nav button {
+   display: none;
+}
+
+.right-section .dark-mode {
+   background-color: var(--color-light);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   height: 1.7rem;
+   width: 4.2rem;
+   cursor: pointer;
+   border-radius: var(--border-radius-1);
+}
+
+.right-section .dark-mode span {
+   font-size: 1.1rem;
+   width: 50%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.right-section .dark-mode span.active {
+   background-color: var(--color-primary);
+   color: white;
+   border-radius: var(--border-radius-1);
+}
+
+.right-section .nav .profile {
+   display: flex;
+   gap: 2rem;
+   text-align: right;
+}
+
+.right-section .nav .profile .profile-photo {
+   width: 2.8rem;
+   height: 2.8rem;
+   border-radius: 50%;
+   overflow: hidden;
+}
+
