--- a/styles.css
+++ b/styles.css
@@ -432,3 +432,165 @@ main .recent-orders a {
    overflow: hidden;
 }
 
+.right-section .user-profile {
+   display: flex;
+   justify-content: center;
+   text-align: center;
+   margin-top: 1rem;
+   background-color: var(--color-white);
+   padding: var(--card-padding);
+   border-radius: var(--card-border-radius);
+   box-shadow: var(--box-shadow);
+   cursor: pointer;
+   transition: all 0.3s ease;
+}
+
+.right-section .user-profile:hover {
+   box-shadow: none;
+}
+
+.right-section .user-profile img {
+   width: 11rem;
+   height: auto;
+   margin-bottom: 0.8rem;
+   border-radius: 50%;
+}
+
+.right-section .user-profile h2 {
+   margin-bottom: 0.2rem;
+}
+
+.right-section .reminders {
+   margin-top: 2rem;
+}
+
+.right-section .reminders .header {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   margin-bottom: 0.8rem;
+}
+
+.right-section .reminders .header span {
+   padding: 10px;
+   box-shadow: var(--box-shadow);
+   background-color: var(--color-white);
+   border-radius: 50%;
+}
+
+.right-section .reminders .notification {
+   background-color: var(--color-white);
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+   margin-bottom: 0.7rem;
+   padding: 1.4rem var(--card-padding);
+   border-radius: var(--border-radius-2);
+   box-shadow: var(--box-shadow);
+   cursor: pointer;
+   transition: all 0.3s ease;
+}
+
+.right-section .reminders .notification:hover {
+   box-shadow: none;
+}
+
+.right-section .reminders .notification .content {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin: 0;
+   width: 100%;
+}
+
+.right-section .reminders .notification .icon {
+   padding: 0.6rem;
+   color: var(--color-white);
+   background-color: var(--color-success);
+   border-radius: 20%;
+   display: flex;
+}
+
+.right-section .reminders .notification.deactive .icon {
+   background-color: var(--color-danger);
+}
+
+.right-section .reminders .add-reminder {
+   background-color: var(--color-white);
+   border: 2px dashed var(--color-primary);
+   color: var(--color-primary);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   cursor: pointer;
+}
+
+.right-section .reminders .add-reminder:hover {
+   background-color: var(--color-primary);
+   color: var(--color-white);
+}
+
+.right-section .reminders .add-reminder div {
+   display: flex;
+   align-items: center;
+   gap: 0.6rem;
+}
+
+@media screen and (max-width: 1200px) {
+   .container {
+      width: 95%;
+      grid-template-columns: 7rem auto 23rem;
+   }
+
+   aside .logo h2 {
+      display: none;
+   }
+
+   aside .sidebar h3 {
+      display: none;
+   }
+
+   aside .sidebar a {
+      width: 5.6rem;
+   }
+
+   aside .sidebar a:last-child {
+      position: relative;
+      margin-top: 1.8rem;
+   }
+
+   main .analyse {
+      grid-template-columns: 1fr;
+      gap: 0;
+   }
+
+   main .new-users .user-list .user {
+      flex-basis: 40%;
+   }
+
+   main .recent-orders {
+      width: 94%;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin: 2rem 0 0 0.8rem;
+   }
+
+   main .recent-orders table {
+      width: 83vw;
+   }
+
+   main table thead tr th:last-child,
+   main table thead tr th:first-child {
+      display: none;
+   }
+
+   main table tbody tr td:last-child,
+   main table tbody tr td:first-child {
+      display: none;
+   }
+
+   @media screen and (max-width: 768px) {
+      
+   }
+}
